@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.673 2005-06-01 17:21:19 castaglia Exp $
+$Id: NEWS,v 1.674 2005-06-03 07:12:47 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -29,6 +29,7 @@ CVS
 - Bug 2601 - mod_delay sometimes delays for a long time.
 - Bug 2622 - Segfault seen randomly in mod_delay.
 - Bug 2578 - ProFTPD does not listen on IPv6 addresses on FreeBSD.
+- Bug 2624 - "fh_data" macro collision causes compiler error on Tru64 V5.1A.
 
 1.3.0rc1 - Released 10-Apr-2005
 --------------------------------
